ke_scraper_rent done
Minor bugs might need to be fixed like:
1. a 'table' file created

Future improve on generator_url.

--- a/test.ipynb
+++ b/test.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -34,13 +34,44 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 79%|█████████████████████████████████         | 78/99 [01:12<00:16,  1.28it/s]"
+      "100%|████████████████████████████████████████████| 2/2 [00:04<00:00,  1.62s/it]\n",
+      "100%|██████████████████████████████████████████| 90/90 [02:20<00:00,  1.62s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 2min 32s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "df = Ke().ke_scraper_rent()"
+    "dict_all = Ke().ke_scraper_rent()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://ke-image.ljcdn.com/110000-inspection/prod-66c4395d-76ba-4e7a-a690-bfccfe89b1d4.jpg.780x439.jpg'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "json.loads(dict_all[4]['房源图片列表'])[0]"
    ]
   },
   {
@@ -48,18 +79,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(df)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
