--- a/test.ipynb
+++ b/test.ipynb
@@ -13,12 +13,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Rent"
+    "# Rent\n",
+    "\n",
+    "### Debug\n",
+    "1. 有未知报错，请检查: https://bj.zu.ke.com/zufang/BJ2231281092281761792.html\n",
+    "2. 为什么3000次循环只保存下1571行数据？\n",
+    "\n",
+    "### Performance\n",
+    "1. 2019-4-17 14:08:30  `1h 11min 48s`,`1571 rows × 42 columns`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -34,52 +41,39 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████| 2/2 [00:04<00:00,  1.62s/it]\n",
-      "100%|██████████████████████████████████████████| 90/90 [02:20<00:00,  1.62s/it]\n"
+      "100%|██████████████████████████████████████████| 99/99 [01:23<00:00,  1.42it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 2min 32s\n"
+      "开始获取房源具体信息。\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  2%|▉                                     | 72/3000 [01:37<1:04:41,  1.33s/it]"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "dict_all = Ke().ke_scraper_rent()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://ke-image.ljcdn.com/110000-inspection/prod-66c4395d-76ba-4e7a-a690-bfccfe89b1d4.jpg.780x439.jpg'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import json\n",
-    "json.loads(dict_all[4]['房源图片列表'])[0]"
+    "df = Ke().ke_scraper_rent(export='csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "df"
+   ]
   }
  ],
  "metadata": {
