drop urls list duplicates

--- a/test.ipynb
+++ b/test.ipynb
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "df = Ke(url='https://bj.zu.ke.com/zufang/dongcheng/rt200600000001rp2rp3rp4/#contentList', keyword='北京东城整租').ke_scraper_rent(export='csv')"
+    "df = Ke(url='https://bj.zu.ke.com/zufang/dongcheng/rt200600000001rp2rp3rp4/#contentList', keyword='北京东城整租').ke_scraper_rent(export=None)"
    ]
   },
   {
